# dpia-codeassessment-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
data/: legal_sources.csv
src/technical_dpia_mcp/: __init__.py  csv_loader.py  documentation_scraper.py  embeddings.py  pdf_scraper.py  scheduler.py  security.py  server.py  vector_store.py
