[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_backend"

[project]
name = "technical-dpia-mcp"
version = "0.1.0"
description = "MCP server for generating technical Data Protection Impact Assessments (DPIA) from codebase analysis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "chromadb>=0.6.4",
    "sentence-transformers>=3.4.1",
    "openai>=1.59.9",
    "tiktoken>=0.8.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "numpy>=2.2.4",
    "typing-extensions>=4.13.0",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.1",
    "pypdf>=5.1.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "black>=25.1.0",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
