[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-dpia-mcp"
version = "0.1.0"
description = "MCP server for generating technical Data Protection Impact Assessments (DPIA) from codebase analysis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "chromadb>=0.6.4",
    "sentence-transformers>=3.4.1",
    "openai>=1.59.9",
    "tiktoken>=0.8.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "numpy>=2.2.4",
    "typing-extensions>=4.13.0",
    "starlette>=0.41.3",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.1",
    "pypdf>=6.0.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "black>=25.1.0",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade (Python version upgrades)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["technical_dpia_mcp"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "apscheduler.*",
    "bs4.*",
    "pypdf.*",
    "pdfplumber.*",
    "PyPDF2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
